fixed css wrong font size

--- a/src/plugins/websearch/templates/css/seeks_search.css
+++ b/src/plugins/websearch/templates/css/seeks_search.css
@@ -119,7 +119,7 @@ body {
 }
 
 #search_results .search_snippet .personalized_result {
-        font-size: 16px;
+        /* font-size: 16px; */
         padding: 0px 25px;
 	margin-left: 0px;
         background-repeat: no-repeat;
